--- a/index.html
+++ b/index.html
@@ -40,7 +40,29 @@
                     </div>
                   </div>
             </div>
-    </div>
+    </div>  <div class ="col-md-4">
+                <div class="card" style="width: 18rem;">
+                    <img src="img/projeto-1.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual" />
+                    <div class="card-body">
+                      <h5 class="card-title">Minha Biblioteca: uma webpage personalizada</h5>
+                      <p class="card-text">
+                        Este projeto é uma página web que apresenta uma lista dos meus animes favoritos,incluindo informações sobre os autores e
+                        datas de criação.A pagina é estilizada com CSS para uma visualização agradável e usa fontes externas do Google Fonts
+                      </p>
+                      <button type="button" class="btn btn-link">Veja o projeto</button>
+                    </div>
+                  </div>  <div class ="col-md-4">
+                <div class="card" style="width: 18rem;">
+                    <img src="img/projeto-1.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual" />
+                    <div class="card-body">
+                      <h5 class="card-title">Minha Biblioteca: uma webpage personalizada</h5>
+                      <p class="card-text">
+                        Este projeto é uma página web que apresenta uma lista dos meus animes favoritos,incluindo informações sobre os autores e
+                        datas de criação.A pagina é estilizada com CSS para uma visualização agradável e usa fontes externas do Google Fonts
+                      </p>
+                      <button type="button" class="btn btn-link">Veja o projeto</button>
+                    </div>
+                  </div>
  </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
