--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <p>dedicação</p>
         </div>
     </header>
-    <main class = "container">
+    <main class = "container mt-5">
         <h2>meus projetos</h2>
         <div class="row">
             <div class ="col-md-4">
