--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         </p>
         <p>Minhas habilidades</p>
         <div>
-            <p>flexibilidade</p>
-            <p>criatividade</p>
-            <p>dedicação</p>
+            <p class="badge bg-secondary">flexibilidade</p>
+            <p class="badge bg-secondary">criatividade</p>
+            <p class="badge bg-secondary">dedicação</p>
         </div>
     </header>
     <main class = "container mt-5">
