--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-    <header class="container">
-        <img src="img/₊˚ପ⊹.jpeg" alt="avatar da Fernanda" class="rounded-circle"width="150" height="150" srcset="">
+    <header class="container text-center">
+        <img src="img/tete.jpeg" alt="avatar da Fernanda" class="rounded-circle"width="150" height="150" srcset="">
         <p>Eu sou Esthefany_</p>
         <h1>Futura Paleontóloga</h1>
         <p>Estou cursando o ensino medio e atualmente estou fazendo curso de administração,iniciei um trabalho na área financeira de uma empresa
@@ -40,7 +40,8 @@
                     </div>
                   </div>
             </div>
-    </div>  <div class ="col-md-4">
+    </div> 
+     <div class ="col-md-4">
                 <div class="card" style="width: 18rem;">
                     <img src="img/projeto-1.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual" />
                     <div class="card-body">
