--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <header class="container text-center">
         <img src="img/tete.jpeg" alt="avatar da Fernanda" class="rounded-circle"width="150" height="150" srcset="">
         <p>Eu sou Esthefany_</p>
-        <h1>Futura Paleontóloga</h1>
+        <h1>Futura Desenhista</h1>
         <p>Estou cursando o ensino medio e atualmente estou fazendo curso de administração,iniciei um trabalho na área financeira de uma empresa
-            más pretendo futuramente seguir carreira como Paleontóloga
+            más pretendo futuramente seguir carreira como Desenhista
         </p>
         <p>Minhas habilidades</p>
         <div>
