--- a/index.html
+++ b/index.html
@@ -45,10 +45,9 @@
                 <div class="card" style="width: 18rem;">
                     <img src="img/projeto-1.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual" />
                     <div class="card-body">
-                      <h5 class="card-title">Minha Biblioteca: uma webpage personalizada</h5>
+                      <h5 class="card-title">Meus Animes Favoritos</h5>
                       <p class="card-text">
-                        Este projeto é uma página web que apresenta uma lista dos meus animes favoritos,incluindo informações sobre os autores e
-                        datas de criação.A pagina é estilizada com CSS para uma visualização agradável e usa fontes externas do Google Fonts
+                        Essa é uma listagem com meus animes favoritos julgando pelo formato.
                       </p>
                       <button type="button" class="btn btn-link">Veja o projeto</button>
                     </div>
@@ -56,10 +55,9 @@
                 <div class="card" style="width: 18rem;">
                     <img src="img/projeto-1.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual" />
                     <div class="card-body">
-                      <h5 class="card-title">Minha Biblioteca: uma webpage personalizada</h5>
+                      <h5 class="card-title">Meus Artistas favoritos </h5>
                       <p class="card-text">
-                        Este projeto é uma página web que apresenta uma lista dos meus animes favoritos,incluindo informações sobre os autores e
-                        datas de criação.A pagina é estilizada com CSS para uma visualização agradável e usa fontes externas do Google Fonts
+                        Meus artistas favoritos que me inspiram de certa forma desde a arte a historia de vida. 
                       </p>
                       <button type="button" class="btn btn-link">Veja o projeto</button>
                     </div>
