--- a/index.html
+++ b/index.html
@@ -63,6 +63,15 @@
                     </div>
                   </div>
  </main>
+
+<footer class="container">
+  <h2>Entre em contato</h2>
+  <div>
+    <a href="https://github.com/strawberryshorcake">GitHub</a>
+  </div>
+  <p>© Copyright 2025. Produzido por Esthefany De Assis Cunha</p>
+</footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
