--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
                   </div>
  </main>
 
-<footer class="container">
+<footer class="container py-5">
   <h2>Entre em contato</h2>
   <div>
     <a href="https://github.com/strawberryshorcake">GitHub</a>
   </div>
-  <p>© Copyright 2025. Produzido por Esthefany De Assis Cunha</p>
+  <p class="my 5 text-center">© Copyright 2025. Produzido por Esthefany De Assis Cunha</p>
 </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
