--- a/index.html
+++ b/index.html
@@ -2,77 +2,84 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <title>Meu portfólio</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+  <title>Meu portfólio</title>
 </head>
 
 <body>
-    <header class="container text-center">
-        <img src="img/tete.jpeg" alt="avatar da Fernanda" class="rounded-circle"width="150" height="150" srcset="">
-        <p>Eu sou Esthefany_</p>
-        <h1>Futura Desenhista</h1>
-        <p>Estou cursando o ensino medio e atualmente estou fazendo curso de administração,iniciei um trabalho na área financeira de uma empresa
-            más pretendo futuramente seguir carreira como Desenhista
-        </p>
-        <p>Minhas habilidades</p>
-        <div>
-            <p class="badge bg-secondary">flexibilidade</p>
-            <p class="badge bg-secondary">criatividade</p>
-            <p class="badge bg-secondary">dedicação</p>
+  <header class="container text-center">
+    <img src="img/tete.jpeg" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150" srcset="">
+    <p>Eu sou Esthefany_</p>
+    <h1>Futura Desenhista</h1>
+    <p>Estou cursando o ensino medio e atualmente estou fazendo curso de administração,iniciei um trabalho na área
+      financeira de uma empresa
+      más pretendo futuramente seguir carreira como Desenhista
+    </p>
+    <p>Minhas habilidades</p>
+    <div>
+      <p class="badge bg-secondary">flexibilidade</p>
+      <p class="badge bg-secondary">criatividade</p>
+      <p class="badge bg-secondary">dedicação</p>
+    </div>
+  </header>
+  <main class="container mt-5">
+    <h2>meus projetos</h2>
+    <div class="row">
+      <div class="col-md-4">
+        <div class="card" style="width: 18rem;">
+          <img src="img/projeto-1.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual" />
+          <div class="card-body">
+            <h5 class="card-title">Minha Biblioteca: uma webpage personalizada</h5>
+            <p class="card-text">
+              Este projeto é uma página web que apresenta uma lista dos meus animes favoritos,incluindo informações
+              sobre os autores e
+              datas de criação.A pagina é estilizada com CSS para uma visualização agradável e usa fontes externas do
+              Google Fonts
+            </p>
+            <button type="button" class="btn btn-link">Veja o projeto</button>
+          </div>
         </div>
-    </header>
-    <main class = "container mt-5">
-        <h2>meus projetos</h2>
-        <div class="row">
-            <div class ="col-md-4">
-                <div class="card" style="width: 18rem;">
-                    <img src="img/projeto-1.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual" />
-                    <div class="card-body">
-                      <h5 class="card-title">Minha Biblioteca: uma webpage personalizada</h5>
-                      <p class="card-text">
-                        Este projeto é uma página web que apresenta uma lista dos meus animes favoritos,incluindo informações sobre os autores e
-                        datas de criação.A pagina é estilizada com CSS para uma visualização agradável e usa fontes externas do Google Fonts
-                      </p>
-                      <button type="button" class="btn btn-link">Veja o projeto</button>
-                    </div>
-                  </div>
-            </div>
-    </div> 
-     <div class ="col-md-4">
-                <div class="card" style="width: 18rem;">
-                    <img src="img/projeto-1.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual" />
-                    <div class="card-body">
-                      <h5 class="card-title">Meus Animes Favoritos</h5>
-                      <p class="card-text">
-                        Essa é uma listagem com meus animes favoritos julgando pelo formato.
-                      </p>
-                      <button type="button" class="btn btn-link">Veja o projeto</button>
-                    </div>
-                  </div>  <div class ="col-md-4">
-                <div class="card" style="width: 18rem;">
-                    <img src="img/projeto-1.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual" />
-                    <div class="card-body">
-                      <h5 class="card-title">Meus Artistas favoritos </h5>
-                      <p class="card-text">
-                        Meus artistas favoritos que me inspiram de certa forma desde a arte a historia de vida. 
-                      </p>
-                      <button type="button" class="btn btn-link">Veja o projeto</button>
-                    </div>
-                  </div>
- </main>
+      </div>
 
-<footer class="container py-5">
-  <h2>Entre em contato</h2>
-  <div>
-    <a href="https://github.com/strawberryshorcake">GitHub</a>
-  </div>
-  <p class="my 5 text-center">© Copyright 2025. Produzido por Esthefany De Assis Cunha</p>
-</footer>
+      <div class="col-md-4">
+        <div class="card" style="width: 18rem;">
+          <img src="img/projeto-1.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual" />
+          <div class="card-body">
+            <h5 class="card-title">Meus Animes Favoritos</h5>
+            <p class="card-text">
+              Essa é uma listagem com meus animes favoritos julgando pelo formato.
+            </p>
+            <button type="button" class="btn btn-link">Veja o projeto</button>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card" style="width: 18rem;">
+          <img src="img/projeto-1.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual" />
+          <div class="card-body">
+            <h5 class="card-title">Meus Artistas favoritos </h5>
+            <p class="card-text">
+              Meus artistas favoritos que me inspiram de certa forma desde a arte a historia de vida.
+            </p>
+            <button type="button" class="btn btn-link">Veja o projeto</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <footer class="container py-5">
+    <h2>Entre em contato</h2>
+    <div>
+      <a href="https://github.com/strawberryshorcake">GitHub</a>
+    </div>
+    <p class="my 5 text-center">© Copyright 2025. Produzido por Esthefany De Assis Cunha</p>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
