--- a/index.html
+++ b/index.html
@@ -32,12 +32,9 @@
         <div class="card" style="width: 18rem;">
           <img src="img/projeto-1.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual" />
           <div class="card-body">
-            <h5 class="card-title">Minha Biblioteca: uma webpage personalizada</h5>
+            <h5 class="card-title">Minhas Artes Favoritas</h5>
             <p class="card-text">
-              Este projeto é uma página web que apresenta uma lista dos meus animes favoritos,incluindo informações
-              sobre os autores e
-              datas de criação.A pagina é estilizada com CSS para uma visualização agradável e usa fontes externas do
-              Google Fonts
+              Minhas artes favoritas,incluindo desde pinturas,desenhos e esculturas.
             </p>
             <button type="button" class="btn btn-link">Veja o projeto</button>
           </div>
