--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <header class="container text-center">
-    <img src="img/tete.jpeg" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150" srcset="">
+    <img src="img/pintora.jpeg" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150" srcset="">
     <p>Eu sou Esthefany_</p>
     <h1>Futura Desenhista</h1>
     <p>Estou cursando o ensino medio e atualmente estou fazendo curso de administração,iniciei um trabalho na área
