--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
       <div class="col-md-4">
         <div class="card" style="width: 18rem;">
-          <img src="img/projeto-1.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual" />
+          <img src="img/one piece.jpeg" class="card-img-top" alt="Imagem do projeto de biblioteca virtual" />
           <div class="card-body">
             <h5 class="card-title">Meus Animes Favoritos</h5>
             <p class="card-text">
