--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <p class="card-text">
               Minhas artes favoritas,incluindo desde pinturas,desenhos e esculturas.
             </p>
-            <button type="button" class="btn btn-link">Veja o projeto</button>
+            <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#exampleModal1">Veja o projeto</button>
           </div>
         </div>
       </div>
@@ -49,7 +49,7 @@
             <p class="card-text">
               Essa é uma listagem com meus animes favoritos julgando pelo formato.
             </p>
-            <button type="button" class="btn btn-link">Veja o projeto</button>
+            <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#exampleModal2">Veja o projeto</button>
           </div>
         </div>
       </div>
@@ -61,13 +61,31 @@
             <p class="card-text">
               Meus artistas favoritos que me inspiram de certa forma desde a arte a historia de vida.
             </p>
-            <button type="button" class="btn btn-link">Veja o projeto</button>
+            <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#exampleModal3">Veja o projeto</button>
           </div>
         </div>
       </div>
     </div>
   </main>
-
+<div class="modal" tabindex="-1" role="dialog">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>Modal body text goes here.</p>
+      </div>
+      <div class="modal-footer">
+        <a href="">ver projeto ao vivo </a>
+        <a href="">ver codigo do projeto</a>
+      </div>
+    </div>
+  </div>
+</div>
   <footer class="container py-5">
     <h2>Entre em contato</h2>
     <div>
