--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </div>
     </div>
   </main>
-<div class="modal" tabindex="-1" role="dialog">
+<div class="modal" id="modal1" tabindex="-1" role="dialog">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
