--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <header class="container text-center">
-    <img src="img/pintora.jpeg" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150" srcset="">
+    <img src="img/pintora.jpeg" alt="imagem de uma garota sentada debaixo de uma arvore desenhando" class="rounded-circle" width="150" height="150" srcset="">
     <p>Eu sou Esthefany_</p>
     <h1>Futura Desenhista</h1>
     <p>Estou cursando o ensino medio e atualmente estou fazendo curso de administração,iniciei um trabalho na área
@@ -73,11 +73,10 @@
       <div class="modal-header">
         <h5 class="modal-title">Modal title</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
+          <div class="modal-body">
         </button>
       </div>
-      <div class="modal-body">
-        <p>
+      <p>
     O projeto é uma página web criada com HTML e CSS, destinada a exibir uma
     coleção pessoal de livros favoritos. O objetivo é criar um ambiente virtual
     onde seja possível compartilhar seus livros preferidos, fornecendo uma
